Index First Changes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1">
     <title>bluedot. is a minimal portfolio</title>
-    <meta name="description" content="bluedot. is a minimal portfolio HTML available on Envato" />
-    <link rel="canonical" href="https://bluedot.digitalwork.ovh" />
+    <meta name="description" content="appably" />
+    <link rel="canonical" href="https://appably.github.io/" />
     <meta property="og:locale" content="en_EN" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="bluedot." />
-    <meta property="og:description" content="bluedot. is a minimal portfolio HTML available on Envato" />
-    <meta property="og:url" content="https://bluedot.digitalwork.ovh" />
+    <meta property="og:description" content="appably" />
+    <meta property="og:url" content="https://appably.github.io/" />
     <meta property="og:site_name" content="bluedot." />
     <meta property="og:image" content="/assets/og-bluedot.jpg" />
     
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="http://bluedot.ykaydesign.ovh/"><img src="/assets/bluedot-logo.svg" alt="Bluedot dot" class="logo"><img src="/assets/bluedot-text.svg" alt="bluedot." class="logo-text"></a>
+                    <a href="https://appably.github.io/"><img src="/assets/bluedot-logo.svg" alt="appably" class="logo"><img src="/assets/bluedot-text.svg" alt="bluedot." class="logo-text"></a>
             </p>
         </div>
         <!-- END Logo -->
@@ -85,26 +85,12 @@
                     <li><a href="#contact">Contact.</a></li>
                 </ul>
             </nav>
-            <div id="language-selector-mobile">
-                <ul>
-                    <li><a href="#">EN.</a></li>
-                    <li><a href="#">FR.</a></li>
-                </ul>
-            </div>
         </div>
     </div>
     <!-- END Mobile navigation bar -->
 
 </header>
-
-<!-- Language selector -->
-<div id="language-selector">
-    <ul>
-        <li><a href="#">EN.</a></li>
-        <li><a href="#">FR.</a></li>
-    </ul>
-</div>
-<!-- END Language selector -->    
+  
     <!-- Main container -->
     <main>
         <!-- Home Full Page -->
@@ -336,7 +322,7 @@
     
     <!-- Social links -->
     <ul class="social">
-        <li><a href="#">Facebook</a></li>
+        <li><a href="https://www.facebook.com/appably">Facebook</a></li>
         <li><a href="#">Twitter</a></li>
         <li><a href="#">Instagram</a></li>
     </ul>
