--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <div id="description-text-container">
                 <h1 class="title">appably</h1>
                 <p class="description"><a href="#work">we turn ideas into apps</a><br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br />
-                    Feel free to <a href="#contact">contact</a> me!</p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br /><br /><br />
+                    <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
-                    <span class="two-words-overlay">appably<br />&nbsp;&nbsp;&nbsp;we turn ideas into apps</span>
+                    <span class="two-words-overlay">a mobile app company</span>
                 </div>
             </div>
             <div id="line-scroll-container">
