--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="logo-text"></a>
+                    <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="logo"></a>
             </p>
         </div>
         <!-- END Logo -->
