--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="logo"></a>
+                    <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="img-fluid"></a>
             </p>
         </div>
         <!-- END Logo -->
@@ -97,7 +97,7 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">we turn ideas into apps</h1>
-                <p class="description"><a href="#work">Lorem ipsum dolor sit amet</a><br /><br />
+                <p class="description"><a href="#">Lorem ipsum dolor sit amet</a><br /><br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br /><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
@@ -307,7 +307,7 @@
    
     <!-- Logo footer -->
     <div class="logo-footer">
-        <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="logo-text"></a>
+        <a href="https://appably.github.io/">appably</a></p>
     </div>
     <!-- END Logo footer -->
     
