--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Logo -->
         <div class="col-sm-6">
             <p class="site-title">
-                    <a href="https://appably.github.io/"><img src="/assets/appablylogo.svg" alt="appably" class="img-fluid"></a>
+                    <a href="https://appably.github.io/"><img src="/assets/appablyLogo.png" alt="appably"></a>
             </p>
         </div>
         <!-- END Logo -->
@@ -307,7 +307,7 @@
    
     <!-- Logo footer -->
     <div class="logo-footer">
-        <a href="https://appably.github.io/">appably</a></p>
+        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="logo"></a>
     </div>
     <!-- END Logo footer -->
     
