--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                    <div class="row">
                         <div class="work-image-container col-lg-6">
                             <img class="mockup-img" src="/images/mockup-3.png" alt="Project 1" width="557" height="438">
-                            <img class="mockup-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
+                            <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Mobile App</p>
@@ -158,7 +158,7 @@
                    <div class="row">
                         <div class="work-image-container col-lg-6">
                             <img class="mockup-img" src="/images/mockup-3.png" alt="Project 2" width="557" height="438">
-                            <img class="mockup-gif tablet-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
+                            <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Website</p>
@@ -231,7 +231,7 @@
                        <div class="row">
                             <div class="work-image-container col-lg-6">
                             <img class="mockup-img" src="/images/mockup-3.png" alt="Project 1" width="557" height="438">
-                            <img class="mockup-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
+                            <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Corporate website</p>
