--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Mobile App</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis.</p>
-                            <div class="work-button"><a href="#" target="_blank">VISIT WEBSITE</a></div>
-                            <div class="work-button"><a href="casestudy-one.php">CASE STUDY</a></div>
+                            <p class="work-category">Mobile Game</p>
+                            <p class="work-description">We had trouble with the timer and gameplay logic in our code. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them. - Tremayne Toorie(Sasha Says)</p>
+                            <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
                         </div>
@@ -144,7 +143,7 @@
         
         <!-- Project 2 -->
         <section class="work work-two">
-            <h2 class="work-title">Client - Project</h2>
+            <h2 class="work-title">Client - Up2Date</h2>
             <div class="work-block-container">
                 <div class="word-container">
                     <div class="word-overlay">
@@ -161,16 +160,11 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Website</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis.</p>
-                            <div class="work-button"><a href="#" target="_blank">VISIT WEBSITE</a></div>
-                            <div class="work-button"><a href="casestudy-two.php">CASE STUDY</a></div>
+                            <p class="work-category">Restaurant and Activities Discount App</p>
+                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis. - Brandon Stokes(Up2Date)</p>
+                            <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
+                            <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
                             <div class="work-details">
-                                <ul>
-                                    <li>ROLE: <span>Project manager</span></li>
-                                    <li>YEAR: <span>2017</span></li>
-                                    <li>CLIENT: <span>Client</span></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -181,7 +175,7 @@
         
         <!-- Project 3 -->
         <section class="work work-three">
-            <h2 class="work-title">Client - Big project</h2>
+            <h2 class="work-title">Client - Pledge</h2>
             <div class="work-block-container">
                 <div class="word-container">
                     <div class="word-overlay">
@@ -198,8 +192,8 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Web app</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis.</p>
+                            <p class="work-category">Non-Profit Events App</p>
+                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis. - Indigo Sams(Pledge)</p>
                             <div class="work-button"><a href="casestudy-three.php">CASE STUDY</a></div>
                             <div class="work-details">
                                 <ul>
