--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
         <!-- Home Full Page -->
         <section id="home">
             <div id="description-text-container">
-                <h1 class="title">we turn ideas into apps</h1>
-                <p class="description"><a href="#">Lorem ipsum dolor sit amet</a><br /><br />
+                <h1 class="title">turning ideas into apps</h1>
+                <p class="description"><a href="#what">DESIGN - DEVELOPMENT - MARKETING - BEYOND</a><br /><br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br /><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
-                    <span class="two-words-overlay">a mobile app company</span>
+                    <span class="two-words-overlay">turning ideas into apps</span>
                 </div>
             </div>
             <div id="line-scroll-container">
@@ -194,13 +194,8 @@
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p>
                             <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis. - Indigo Sams(Pledge)</p>
-                            <div class="work-button"><a href="casestudy-three.php">CASE STUDY</a></div>
+                            <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
-                                <ul>
-                                    <li>ROLE: <span>Project manager</span></li>
-                                    <li>YEAR: <span>2017</span></li>
-                                    <li>CLIENT: <span>Client</span></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
