--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
-                <p class="description"><a href="#what">DESIGN - DEVELOPMENT - MARKETING - BEYOND</a><br /><br />
+                <p class="description"><a href="#what">DESIGN -> DEVELOPMENT -> MARKETING -> BEYOND</a><br /><br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br /><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
@@ -130,7 +130,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Mobile Game</p>
-                            <p class="work-description">We had trouble with the timer and gameplay logic in our code. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them. - Tremayne Toorie(Sasha Says)</p>
+                            <p class="work-description"> "We had trouble with the timer and gameplay logic in our code. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them." - Tremayne Toorie(Sasha Says)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Restaurant and Activities Discount App</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis. - Brandon Stokes(Up2Date)</p>
+                            <p class="work-description"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - Brandon Stokes(Up2Date)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
                             <div class="work-details">
@@ -193,7 +193,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis. - Indigo Sams(Pledge)</p>
+                            <p class="work-description"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - Indigo Sams(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -206,7 +206,7 @@
         
         <!-- Project 4 -->
         <section class="work work-four">
-            <h2 class="work-title">Client - Project</h2>
+            <h2 class="work-title">Comming Soon - Our Community Project</h2>
             <div class="work-block-container">
                 <div class="word-container">
                     <div class="word-overlay">
@@ -223,15 +223,9 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Corporate website</p>
-                            <p class="work-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis.</p>
-                            <div class="work-button"><a href="#" target="_blank">VISIT WEBSITE</a></div>
-                            <div class="work-button"><a href="casestudy-four.php">CASE STUDY</a></div>
+                            <p class="work-category">An App to find Local STEM/STEAM Programs</p>
+                            <p class="work-description">This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community. - The Appably Team</p>
                             <div class="work-details">
-                                <ul>
-                                    <li>ROLE: <span>Developer</span></li>
-                                    <li>YEAR: <span>2017</span></li>
-                                </ul>
                             </div>
                         </div>
                     </div>
@@ -250,38 +244,24 @@
                 <div class="row justify-content-center">
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
-                            <img class="illus-service" src="/assets/icon-projectmgmt.svg" alt="Icone chef de projet">
-                        </div>
-                        <h3 class="title-service">Manage your project</h3>
-                        <p class="text-service">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</p>
-                    </div>
-                    <div class="service col-lg-2 col-sm-4">
-                        <div class="container-illus">
-                            <img class="illus-service" src="/assets/icon-analysis.svg" alt="Icone analyse">
-                        </div>
-                        <h3 class="title-service">Analyse</h3>
-                        <p class="text-service">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</p>
-                    </div>
-                    <div class="service col-lg-2 col-sm-4">
-                        <div class="container-illus">
                             <img class="illus-service" src="/assets/icon-conception.svg" alt="Icone conception">
                         </div>
-                        <h3 class="title-service">Conception</h3>
-                        <p class="text-service">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</p>
-                    </div>                
+                        <h3 class="title-service">Design</h3>
+                        <p class="text-service">The look and feel of your app is vital.  Let us handle the logos, colors, and layout of your app to hook your clients.</p>
+                    </div>
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
                             <img class="illus-service" src="/assets/icon_webd-dev.svg" alt="Icone développement et design">
                         </div>
                         <h3 class="title-service">Development</h3>
-                        <p class="text-service">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</p>
-                    </div>
+                        <p class="text-service">Our team uses the latest tools to create stable cutting-edge apps that are swift and scalable for when your app takes off. </p>
+                    </div>                
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
-                            <img class="illus-service" src="/assets/icon_strategy.svg" alt="Icone Stratégie">
+                            <img class="illus-service" src="/assets/icon_webd-dev.svg" alt="Icone développement et design">
                         </div>
-                        <h3 class="title-service">Digital strategy</h3>
-                        <p class="text-service">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</p>
+                        <h3 class="title-service">Digital Strategy</h3>
+                        <p class="text-service">Every app needs marketing.  We make your online strategy look easy by handling your social media presence, building your website, and search engine optimization. </p>
                     </div>
                 </div>
             </div>
@@ -296,7 +276,7 @@
    
     <!-- Logo footer -->
     <div class="logo-footer">
-        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="logo"></a>
+        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably"></a>
     </div>
     <!-- END Logo footer -->
     
