--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <section id="home">
             <div id="description-text-container">
                 <h1 class="title">turning ideas into apps</h1>
-                <p class="description"><a href="#what">DESIGN -> DEVELOPMENT -> MARKETING -> BEYOND</a><br /><br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.<br /><br /><br />
+                <p class="description"><a href="#what">DESIGN → DEVELOPMENT → MARKETING → BEYOND</a><br /><br />
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis.</a><br /><br /><br />
                     <a href="#contact">CONTACT US</a></p>
                 <div class="word-overlay">
                     <span class="two-words-overlay">turning ideas into apps</span>
@@ -129,8 +129,8 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Mobile Game</p>
-                            <p class="work-description"> "We had trouble with the timer and gameplay logic in our code. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them." - Tremayne Toorie(Sasha Says)</p>
+                            <p class="work-category">Mobile Game</p><br />
+                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them."</p><br />- TREMAYNE TOORIE(Sasha Says)
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Restaurant and Activities Discount App</p>
-                            <p class="work-description"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - Brandon Stokes(Up2Date)</p>
+                            <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - BRANDON STOKES(Up2Date)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
                             <div class="work-details">
@@ -193,7 +193,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Non-Profit Events App</p>
-                            <p class="work-description"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - Indigo Sams(Pledge)</p>
+                            <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - RENEE JOSEPH(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">An App to find Local STEM/STEAM Programs</p>
-                            <p class="work-description">This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community. - The Appably Team</p>
+                            <p class="work-description">	"This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM</p>
                             <div class="work-details">
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                             <img class="illus-service" src="/assets/icon-conception.svg" alt="Icone conception">
                         </div>
                         <h3 class="title-service">Design</h3>
-                        <p class="text-service">The look and feel of your app is vital.  Let us handle the logos, colors, and layout of your app to hook your clients.</p>
+                        <p class="text-service">The look and feel of your app is vital. Let us handle the logos, colors, and layout of your app to hook your clients.</p>
                     </div>
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
@@ -258,10 +258,10 @@
                     </div>                
                     <div class="service col-lg-2 col-sm-4">
                         <div class="container-illus">
-                            <img class="illus-service" src="/assets/icon_webd-dev.svg" alt="Icone développement et design">
+                            <img class="illus-service" src="/assets/icon_strategy.svg" alt="Icone Stratégie">
                         </div>
                         <h3 class="title-service">Digital Strategy</h3>
-                        <p class="text-service">Every app needs marketing.  We make your online strategy look easy by handling your social media presence, building your website, and search engine optimization. </p>
+                        <p class="text-service">Apps need marketing. We make your online strategy look easy by handling your social media, website, and search engine optimization. </p>
                     </div>
                 </div>
             </div>
@@ -276,12 +276,12 @@
    
     <!-- Logo footer -->
     <div class="logo-footer">
-        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably"></a>
+        <a href="https://appably.github.io/"><img src="assets/appablyLogo.png" alt="appably" class="logo-text"></a>
     </div>
     <!-- END Logo footer -->
     
     <!-- Contact mail -->
-    <h2 class="contact-mail" id="contact"><a href="mailto:mail@mail.com">mail@mail.com</a></h2>
+    <h2 class="contact-mail" id="contact"><a href="mailto:contact@appably.co">EMAIL US</a></h2>
     <!-- END Contact mail -->
     
     <!-- Social links -->
