--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="work-description-container col-lg-6">
                             <p class="work-category">Mobile Game</p><br />
-                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them."</p><br />- TREMAYNE TOORIE(Sasha Says)
+                            <p class="work-description"> 	"We had trouble with the timer and gameplay logic in our app. We reached out to Appably for assistance. They professionally diagnosed the problem and stabalized our code.  After that we knew we would need them for the rest of the project. Needless to say, our game turned out amazing!  Couldn't have done it without them."</p>- TREMAYNE TOORIE(Sasha Says)
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/sasha-says/id1266366624?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-details">
                             </div>
@@ -160,7 +160,7 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Restaurant and Activities Discount App</p>
+                            <p class="work-category">Restaurant and Activities Discount App</p><br />
                             <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - BRANDON STOKES(Up2Date)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/up2date-mobile-app/id1292969487?ls=1&mt=8" target="_blank">iOS APP</a></div>
                             <div class="work-button"><a href="https://play.google.com/store/apps/details?id=com.coolreece.up2date&hl=en_US">ANDROID APP</a></div>
@@ -192,7 +192,7 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">Non-Profit Events App</p>
+                            <p class="work-category">Non-Profit Events App</p><br />
                             <p class="work-description"> 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur ultrices felis. Cras hendrerit eros et dictum fringilla. Nam posuere ipsum sit amet est pellentesque, in dignissim erat mattis." - RENEE JOSEPH(Pledge)</p>
                             <div class="work-button"><a href="https://itunes.apple.com/us/app/pledge-app/id1257767470?ls=1&mt=8">iOS APP</a></div>
                             <div class="work-details">
@@ -223,7 +223,7 @@
                             <img class="mockup-gif mobile-gif" src="/images/mockup-gif-3.gif" alt="Gif example on mobile mockup" width="136" height="242">
                         </div>
                         <div class="work-description-container col-lg-6">
-                            <p class="work-category">An App to find Local STEM/STEAM Programs</p>
+                            <p class="work-category">An App to find Local STEM/STEAM Programs</p><br />
                             <p class="work-description">	"This is an in-house mobile app project to help parents find science, technology, engineering, arts, and math programs for their children in preparation for a tech-fueled future.  We feel it's important to use our skills to create a resource for our community." - THE APPABLY TEAM</p>
                             <div class="work-details">
                             </div>
